projects/compiler/test/typechecker/import/error_no_exported_value.out
Error at %FILE_NAME%:1:8
Invalid import
  |  import b from "./_exports"
            ^
There's no exported value named 'b' in module './_exports'
